# tum-dodo-rl-2026

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml
assets/robot/usd/configuration/: dodo_ROS_physics.usd  dodo_ROS_robot.usd  dodo_simple_ROS_physics.usd
configs/: config.yaml
configs/domain_randomization/: dr_basic.yaml  dr_off.yaml
configs/env/: stand_v1.yaml  walk_v1.yaml
configs/train/: ppo_default.yaml
docker/: Dockerfile  docker-compose.yml  requirements.txt
isaaclab_tasks/: __init__.py
isaaclab_tasks/walking/: __init__.py  env_cfg.py  observations.py  rewards.py  terminations.py  train.py
scripts/: build_and_push.sh  download_assets.py  download_assets.sh  eval.sh  export_policy.py  sync_results.sh  train.sh  upload_assets.py  upload_assets.sh
